--- a/popup.html
+++ b/popup.html
@@ -60,6 +60,20 @@
       >
     </div>
 
+    <div class="toggle">
+      <input type="checkbox" id="speedControlEnabled" checked />
+      <label for="speedControlEnabled" class="toggle-label"
+        >Show YouTube speed controls</label
+      >
+    </div>
+
+    <div class="toggle">
+      <input type="checkbox" id="universalSpeedControlEnabled" checked />
+      <label for="universalSpeedControlEnabled" class="toggle-label"
+        >Show speed controls on all videos</label
+      >
+    </div>
+
     <div class="setting-group">
       <label class="setting-label">Wait Time Settings</label>
       <div class="setting-row">
